objects/User_Opp_Track__c.object
<CustomObject>
    <fields>
        <fullName>Last_Opp_Activity_Date__c</fullName>
        <label>Last Opp Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Missed_Week__c</fullName>
        <formula>CreatedDate - 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missed Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Missed__c</fullName>
        <formula>IF ( OR ( CreatedDate &gt;  (Last_Opp_Activity_Date__c + 7),  ISNULL(Last_Opp_Activity_Date__c) ), True, False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Opp_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Opp Track</label>
    <nameField>
        <label>User Opp Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Opp Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>